[gd_scene load_steps=7 format=2]

[ext_resource path="res://Data/Texture/7.png" type="Texture" id=1]
[ext_resource path="res://Entity/Scene4/Scene4.gd" type="Script" id=2]
[ext_resource path="res://Button_font.tres" type="DynamicFont" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -293, 53, 0, 0, 0, 0, -246, -39, 0, 0, 0, 0, -12, -88, 0, 0, 0, 0, 172, -80, 0, 0, 0, 0, 261, 25, 0, 0, 0, 0, 145, 66, 0, 0, 0, 0, -116, 65, 0, 0, 0, 0, -293, 53 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 26.0768

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 65 )

[node name="Scene4" type="Node2D"]
script = ExtResource( 2 )

[node name="7" type="Sprite" parent="."]
scale = Vector2( 0.330871, 0.299383 )
texture = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Point_portal" type="PathFollow2D" parent="Path2D"]
position = Vector2( -293, 53 )
rotation = -1.09848

[node name="Last_portal_point" type="Position2D" parent="."]
position = Vector2( -206, -109 )

[node name="Spawn_portal" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Place_cyborg" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Place_cyborg"]
position = Vector2( -60, 112 )
shape = SubResource( 2 )

[node name="Cyborg_place" type="Node2D" parent="."]

[node name="Point1" type="Position2D" parent="Cyborg_place"]
position = Vector2( -388, 91 )

[node name="Point2" type="Position2D" parent="Cyborg_place"]
position = Vector2( -390, 136 )

[node name="Point3" type="Position2D" parent="Cyborg_place"]
position = Vector2( 413, 103 )

[node name="Point4" type="Position2D" parent="Cyborg_place"]
position = Vector2( 411, 130 )

[node name="Cyborg_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Stop_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Block" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block"]
position = Vector2( -413, 122 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -144.0
margin_right = 336.0
margin_bottom = -130.0
custom_fonts/font = ExtResource( 3 )
text = "Close the portals"
align = 1
valign = 1

[connection signal="timeout" from="Spawn_portal" to="." method="_on_Spawn_portal_timeout"]
[connection signal="body_entered" from="Place_cyborg" to="." method="_on_Place_cyborg_body_entered"]
[connection signal="timeout" from="Cyborg_spawn_timer" to="." method="_on_Cyborg_spawn_timer_timeout"]
[connection signal="timeout" from="Stop_timer" to="." method="_on_Stop_timer_timeout"]
